apps/podinfo/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-podinfo
  namespace: podinfo-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-http01
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - podinfo-dev.student-sgnl.dski23a.timebertt.dev  # ← DEINE DOMAIN
      secretName: dev-podinfo-tls
  rules:
    - host: podinfo-dev.student-sgnl.dski23a.timebertt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-podinfo
                port:
                  number: 9898
